--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <li>
       <img src="https://placehold.it/32x32" alt="">
-      <strong>Voyager 1 </strong>
+      <strong>New Horizons </strong>
     <dl>
       <dt> lanched:</dt>
       <dd><time datatime="1977-09-05">Sept. 5, 1977</time></dd>
@@ -34,7 +34,7 @@
       <dd>Jupiter & beyond</dd>
     </dl>
     <div>
-      <a href="https://en.wikipedia.org/wiki/Voyager_1">Wikipedia</a>
+      <a href="https://en.wikipedia.org/wiki/New_Horizons">Wikipedia</a>
     </div>
   </li>
 
