--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="https://placehold.it/32x32" alt="">
       <strong>Voyager 1 </strong>
     <dl>
-      <dt> Lanched:</dt>
+      <dt> Launched:</dt>
       <dd><time datatime="1977-09-05">Sept. 5, 1977</time></dd>
       <dt>Destination:</dt>
       <dd>Jupiter & beyond</dd>
@@ -28,7 +28,7 @@
       <img src="https://placehold.it/32x32" alt="">
       <strong>New Horizons </strong>
     <dl>
-      <dt> Lanched:</dt>
+      <dt> Launched:</dt>
       <dd><time datatime="1977-09-05">Jan. 19, 2006</time></dd>
       <dt>Destination:</dt>
       <dd>Pluto</dd>
